--- a/model/src/main/sql/com/hellblazer/CoRE/schema/readable/views/protocol.xml
+++ b/model/src/main/sql/com/hellblazer/CoRE/schema/readable/views/protocol.xml
@@ -10,13 +10,13 @@
             CREATE OR REPLACE VIEW readable.protocol AS 
 			 SELECT base_table.id,
 			   r.name AS requester, rs.name AS requested_service, 
-               po.name AS product_ordered, s.name AS service, p.name AS product, 
-			   dt.name AS deliver_to, df.name AS deliver_from, 
-			   base_table.sequence_number, assign.name AS assign_to, base_table.notes, 
+               rp.name AS requested_product, dt.name AS deliver_to, df.name AS deliver_from,
+               assign.name AS assign_to, s.name AS service, p.name AS product,
+			   base_table.copy_attributes, base_table.sequence_number, base_table.notes, 
 			   res.name AS research, up.name AS updated_by, base_table.update_date
 			   FROM ruleform.protocol base_table
                JOIN ruleform.product rs ON base_table.requested_service = rs.id
-			   JOIN ruleform.product po ON base_table.product_ordered = po.id
+			   JOIN ruleform.product rp ON base_table.requested_product = rp.id
                JOIN ruleform.product s ON base_table.service = s.id
                JOIN ruleform.product p ON base_table.product = p.id
                JOIN ruleform.location dt ON base_table.deliver_to = dt.id
