--- a/model/src/main/sql/com/hellblazer/CoRE/schema/readable/views/location_network.xml
+++ b/model/src/main/sql/com/hellblazer/CoRE/schema/readable/views/location_network.xml
@@ -8,7 +8,7 @@
     <changeSet id="1" author="hhildebrand">
         <sql><![CDATA[
             CREATE OR REPLACE VIEW readable.location_network AS 
-			 SELECT n.id, p.name AS parent, rel.name AS relationship, c.name AS child, n.ordering, n.distance, n.notes, r.name AS research, u.name AS updated_by, n.update_date
+			 SELECT n.id, p.name AS parent, rel.name AS relationship, c.name AS child, n.ordering, n.inferred, n.notes, r.name AS research, u.name AS updated_by, n.update_date
 			   FROM ruleform.location_network n
 			   JOIN ruleform.location p ON n.parent = p.id
 			   JOIN ruleform.relationship rel ON n.relationship = rel.id
