--- a/model/src/main/sql/com/hellblazer/CoRE/schema/readable/views/network_inference.xml
+++ b/model/src/main/sql/com/hellblazer/CoRE/schema/readable/views/network_inference.xml
@@ -7,21 +7,21 @@
 
     <changeSet id="1" author="hhildebrand">
         <sql><![CDATA[
-            CREATE OR REPLACE VIEW readable.network_inferrence AS 
-			 SELECT c.id, r1.name AS premise1, r2.name AS premise2, r3.name AS inferrence, c.notes, res.name AS research, up.name AS updated_by, c.update_date
-			   FROM ruleform.network_inferrence c
+            CREATE OR REPLACE VIEW readable.network_inference AS 
+			 SELECT c.id, r1.name AS premise1, r2.name AS premise2, r3.name AS inference, c.notes, res.name AS research, up.name AS updated_by, c.update_date
+			   FROM ruleform.network_inference c
 			   JOIN ruleform.relationship r1 ON c.premise1 = r1.id
 			   JOIN ruleform.relationship r2 ON c.premise2 = r2.id
-			   JOIN ruleform.relationship r3 ON c.inferrence = r3.id
+			   JOIN ruleform.relationship r3 ON c.inference = r3.id
 			   LEFT JOIN ruleform.research res ON c.research = res.id
 			   JOIN ruleform.resource up ON c.updated_by = up.id;
 			
-			ALTER TABLE readable.network_inferrence
+			ALTER TABLE readable.network_inference
 			  OWNER TO core;
             ]]>
         </sql>
         <rollback>
-            <dropView viewName="readable.network_inferrence" />
+            <dropView viewName="readable.network_inference" />
         </rollback>
     </changeSet>
 </databaseChangeLog>
