--- a/model/src/main/sql/com/hellblazer/CoRE/schema/readable/views/location.xml
+++ b/model/src/main/sql/com/hellblazer/CoRE/schema/readable/views/location.xml
@@ -8,9 +8,8 @@
     <changeSet id="1" author="hhildebrand">
         <sql><![CDATA[
             CREATE OR REPLACE VIEW readable.location AS 
-			 SELECT l.id, l.name, c.name AS context, l.description, l.notes, res.name AS research, l.pinned, r.name AS updated_by, l.update_date
+			 SELECT l.id, l.name, l.description, l.notes, res.name AS research, l.pinned, r.name AS updated_by, l.update_date
 			   FROM ruleform.location l
-			   JOIN ruleform.location_context c ON l.context = c.id
 			   LEFT JOIN ruleform.research res ON l.research = res.id
 			   JOIN ruleform.resource r ON l.updated_by = r.id;
 			
