--- a/model/src/main/sql/com/hellblazer/CoRE/schema/readable/views/workspace_unit_authorization.xml
+++ b/model/src/main/sql/com/hellblazer/CoRE/schema/readable/views/workspace_unit_authorization.xml
@@ -7,19 +7,19 @@
 
     <changeSet id="1" author="hhildebrand">
         <sql><![CDATA[
-            CREATE OR REPLACE VIEW readable.workspace_status_code_authorization AS 
-             SELECT t.id, p.name AS product, s.name AS status_code
+            CREATE OR REPLACE VIEW readable.workspace_unit_authorization AS 
+             SELECT t.id, p.name AS product, u.name AS unit
                FROM ruleform.workspace_authorization t
                JOIN ruleform.product p ON t.product = p.id
-               JOIN ruleform.status_code s ON t.status_code = s.id
-               WHERE t.authorization_type = '1';
+               JOIN ruleform.unit u ON t.unit = u.id
+               WHERE t.authorization_type = '2';
             
-            ALTER TABLE readable.workspace_status_code_authorization
+            ALTER TABLE readable.workspace_unit_authorization
               OWNER TO core;
             ]]>
         </sql>
         <rollback>
-            <dropView viewName="workspace_status_code_authorization" />
+            <dropView viewName="workspace_unit_authorization" />
         </rollback>
     </changeSet>
 </databaseChangeLog>
