Eliminate Networked interface.  All existential ruleforms will have associated networks.

--- a/model/src/main/sql/com/hellblazer/CoRE/schema/readable/views/coordinate_nesting.xml
+++ b/model/src/main/sql/com/hellblazer/CoRE/schema/readable/views/coordinate_nesting.xml
@@ -8,9 +8,8 @@
     <changeSet id="1" author="hhildebrand">
         <sql><![CDATA[
             CREATE OR REPLACE VIEW readable.coordinate_nesting AS 
-			 SELECT n.id, k.name AS kind, a.name AS attribute, n.sequence_number, ia.name AS inner_attribute, n.operation, oa.name AS outer_attribute, n.notes, res.name AS research, up.name AS updated_by, n.update_date
+			 SELECT n.id, a.name AS attribute, n.sequence_number, ia.name AS inner_attribute, n.operation, oa.name AS outer_attribute, n.notes, res.name AS research, up.name AS updated_by, n.update_date
 			   FROM ruleform.coordinate_nesting n
-			   JOIN ruleform.coordinate_kind k ON k.id = n.kind
 			   JOIN ruleform.attribute a ON a.id = n.attribute
 			   JOIN ruleform.attribute ia ON ia.id = n.inner_attribute
 			   JOIN ruleform.attribute oa ON oa.id = n.outer_attribute
