--- a/model/src/main/sql/com/hellblazer/CoRE/schema/readable/views/coordinate.xml
+++ b/model/src/main/sql/com/hellblazer/CoRE/schema/readable/views/coordinate.xml
@@ -8,11 +8,10 @@
 	<changeSet id="1" author="hhildebrand">
 		<sql><![CDATA[
             CREATE OR REPLACE VIEW readable.coordinate AS 
-			 SELECT c.id, c.name, k.name AS kind, c.description, c.notes, c.pinned, r.name AS research, up.name AS updated_by, c.update_date
+			 SELECT c.id, c.name, c.description, c.notes, c.pinned, r.name AS research, up.name AS updated_by, c.update_date
 			   FROM ruleform.coordinate c
 			   LEFT JOIN ruleform.research r ON r.id = c.research
-			   JOIN ruleform.agency up ON up.id = c.updated_by
-			   JOIN ruleform.coordinate_kind k ON k.id = c.kind;
+			   JOIN ruleform.agency up ON up.id = c.updated_by;
 			
 			ALTER TABLE readable.coordinate
 			  OWNER TO core;
