--- a/service/src/main/resources/ui/app/views/new.html
+++ b/service/src/main/resources/ui/app/views/new.html
@@ -6,14 +6,21 @@
 
     Parent:
       <span >
-        <select ng-model="product" ng-options="p.name for p in products">
+        <select ng-model="auth.parent" ng-options="p.name for p in products">
 
         </select>
       </span><br/>
 
     Relationship:
       <span  class="nullable">
-        <select ng-model="product.rel" ng-options="r.name for r in product.rels">
+        <select ng-model="auth.rel" ng-options="r.name for r in relationships">
+
+        </select>
+      </span><br/>
+
+    Child:
+    <span  class="nullable">
+        <select ng-model="auth.child" ng-options="p.name for p in products">
 
         </select>
       </span><br/>
