More steps in the workbench API

--- a/service/src/main/resources/ui/app/views/exis_ruleform_list.html
+++ b/service/src/main/resources/ui/app/views/exis_ruleform_list.html
@@ -1,5 +1,4 @@
 <div ng-repeat="rf in ruleforms" ng-controller="ERListViewCtrl">
     <span>{{rf.id}}</span>
-    <span>{{rf.name}}</span>
-    <span>{{rf.description}}</span>
+    <span><a href="/ui/app/ruleform_list.html#/Product/{{rf.id}}">{{rf.name}}</a></span>
 </div>
