You can now navigate all the Existential Ruleforms through the UI. Booyah.

--- a/service/src/main/resources/ui/app/views/exis_ruleform_detail.html
+++ b/service/src/main/resources/ui/app/views/exis_ruleform_detail.html
@@ -1,4 +1,4 @@
 <div ng-controller="ERDetailViewController" model="ruleform">
-    <span>{{ruleform.name}}</span>
-    <span>{{ruleform.description}}</span>
+    <span>Name: {{ruleform.name}}</span>
+    <span>Description: {{ruleform.description}}</span>
 </div>
