Breadcrumb links for the UI

--- a/service/src/main/resources/ui/app/views/exis_ruleform_detail.html
+++ b/service/src/main/resources/ui/app/views/exis_ruleform_detail.html
@@ -1,4 +1,5 @@
 <div ng-controller="ERDetailViewController" model="ruleform">
-    <span>Name: {{ruleform.name}}</span>
-    <span>Description: {{ruleform.description}}</span>
+<a href="/ui/app/ruleform_list.html#/{{ruleform.ruleform}}/">Back to {{ruleform.ruleform}} list</a><br/>
+    <span>Name: {{ruleform.name}}</span><br/>
+    <span>Description: {{ruleform.description}}</span><br/>
 </div>
