Fuckin A.  Use root network for inferred_from, premise1 and premise2 for all network inserts.

--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/coordinate_network.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/coordinate_network.xml
@@ -13,7 +13,10 @@
 			     rel.name AS relationship, 
 			     c.name AS child, 
 			     n.ordering, 
-			     n.inferred, 
+                 n.inferred_from, 
+                 n.premise1, 
+                 n.premise2, 
+                 n.inference_rule,
 			     n.notes, 
 			     u.name AS updated_by, 
 			     n.update_date
