--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/attribute_network.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/attribute_network.xml
@@ -12,8 +12,11 @@
 			     p.name AS parent, 
 			     rel.name AS relationship, 
 			     c.name AS child, 
-			     n.ordering, 
-			     n.inferred, 
+			     n.ordering,  
+                 n.inferred_from,
+                 n.premise1, 
+                 n.premise2, 
+                 n.inference_rule,
 			     n.notes, 
 			     u.name AS updated_by, 
 			     n.update_date
