--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_location_network.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_location_network.xml
@@ -8,7 +8,14 @@
     <changeSet id="1" author="hhildebrand">
         <sql><![CDATA[
             CREATE OR REPLACE VIEW readable.product_location_network AS 
-			 SELECT n.id, res.name AS agency, b.name AS product, cb.name AS contextual_product, c.name AS coordinate, n.notes, up.name AS updated_by, n.update_date
+			 SELECT n.id, 
+                    res.name AS agency, 
+                    b.name AS product, 
+                    cb.name AS contextual_product, 
+                    c.name AS coordinate, 
+                    n.notes, 
+                    up.name AS updated_by, 
+                    n.update_date
 			   FROM ruleform.product_location_network n
 			   JOIN ruleform.agency res ON res.id = n.agency
 			   JOIN ruleform.product b ON b.id = n.product
