--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_network.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_network.xml
@@ -8,7 +8,18 @@
     <changeSet id="1" author="hhildebrand">
         <sql><![CDATA[
             CREATE OR REPLACE VIEW readable.product_network AS 
-			 SELECT n.id, p.name AS parent, rel.name AS relationship, c.name AS child, n.ordering, n.inferred_from, n.premise1, n.premise2, n.inference_rule, n.notes, u.name AS updated_by, n.update_date
+			 SELECT n.id, 
+                    p.name AS parent, 
+                    rel.name AS relationship, 
+                    c.name AS child, 
+                    n.ordering, 
+                    n.inferred_from, 
+                    n.premise1, 
+                    n.premise2, 
+                    n.inference_rule, 
+                    n.notes, 
+                    u.name AS updated_by, 
+                    n.update_date
 			   FROM ruleform.product_network n
 			   JOIN ruleform.product p ON n.parent = p.id
 			   JOIN ruleform.relationship rel ON n.relationship = rel.id
