--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/agency_network.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/agency_network.xml
@@ -12,11 +12,10 @@
                     p.name AS parent, 
                     rel.name AS relationship, 
                     c.name AS child, 
+                    n.inferred,
                     n.ordering, 
-                    n.inferred_from, 
                     n.premise1, 
                     n.premise2, 
-                    n.inference_rule, 
                     n.notes, 
                     u.name AS updated_by, 
                     n.update_date
