--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/unit_network.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/unit_network.xml
@@ -11,12 +11,11 @@
 			 SELECT n.id, 
                     p.name AS parent, 
                     rel.name AS relationship, 
-                    c.name AS child, 
-                    n.ordering, 
-                    n.inferred_from, 
+                    c.name AS child,
+                    n.inferred,
+                    n.ordering,
                     n.premise1, 
-                    n.premise2, 
-                    n.inference_rule, 
+                    n.premise2,
                     n.notes, 
                     u.name AS updated_by, 
                     n.update_date
