--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/job_chronology.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/job_chronology.xml
@@ -8,10 +8,16 @@
     <changeSet id="1" author="hhildebrand">
         <sql><![CDATA[
             CREATE OR REPLACE VIEW readable.job_chronology AS 
-			 SELECT base.id, base.job, base.sequence, base.time_stamp, s.name AS old_status, t.name AS new_status, base.notes, up.name AS updated_by, base.update_date
+			 SELECT base.id, 
+                    base.job, 
+                    base.sequence, 
+                    base.time_stamp, 
+                    s.name AS status, 
+                    base.notes, 
+                    up.name AS updated_by, 
+                    base.update_date
 			   FROM ruleform.job_chronology base
-			   JOIN ruleform.status_code s ON base.old_status = s.id
-               JOIN ruleform.status_code t ON base.new_status = s.id
+			   JOIN ruleform.status_code s ON base.status = s.id
 			   JOIN ruleform.agency up ON base.updated_by = up.id;
 			
 			ALTER TABLE readable.job_chronology
