Add optional key to attribute values, to emulate mapped attribute values.  Clean up a bunch of cruft left over in some attribute values. record the product in the job chronology.

--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/agency_attribute.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/agency_attribute.xml
@@ -11,6 +11,7 @@
 			 SELECT ra.id, 
 			     r.name AS agency, 
 			     a.name AS attribute, 
+                 ra.key AS key,
 			     ra.numeric_value, 
 			     ra.integer_value, 
 			     ra.boolean_value, 
