--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/attribute_meta_attribute.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/attribute_meta_attribute.xml
@@ -11,6 +11,7 @@
 			 SELECT aa.id, 
 			     ba.name AS base_attribute, 
 			     a.name AS attribute, 
+                 aa.key AS key,
 			     aa.integer_value, 
 			     aa.numeric_value, 
 			     aa.boolean_value, 
