--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/location_attribute.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/location_attribute.xml
@@ -8,7 +8,14 @@
     <changeSet id="1" author="hhildebrand">
         <sql><![CDATA[
             CREATE OR REPLACE VIEW readable.location_attribute AS 
-			 SELECT la.id, l.name AS location, a.name AS attribute, la.text_value, la.integer_value, r.name AS updated_by, la.update_date
+			 SELECT la.id, 
+                    l.name AS location, 
+                    a.name AS attribute,
+                    la.key AS key, 
+                    la.text_value, 
+                    la.integer_value, 
+                    r.name AS updated_by, 
+                    la.update_date
 			   FROM location_attribute la
 			   JOIN location l ON la.location = l.id
 			   JOIN attribute a ON la.attribute = a.id
