--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/protocol_attribute.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/protocol_attribute.xml
@@ -8,12 +8,18 @@
     <changeSet id="1" author="hhildebrand">
         <sql><![CDATA[
             CREATE OR REPLACE VIEW readable.protocol_attribute AS 
-			 SELECT base_table.id, base_table.protocol, at.name AS attribute, 
+			 SELECT base_table.id, 
+                    base_table.protocol, 
+                    at.name AS attribute, 
 			        base_table.sequence_number,
-			        base_table.text_value, base_table.numeric_value, 
-			        base_table.integer_value, u.name AS unit, 
+                    base_table.key AS key,
+			        base_table.text_value, 
+                    base_table.numeric_value, 
+			        base_table.integer_value, 
+                    u.name AS unit, 
 			        base_table.notes,
-			        up.name AS updated_by, base_table.update_date
+			        up.name AS updated_by, 
+                    base_table.update_date
 			   FROM protocol_attribute base_table
 			   JOIN attribute at ON base_table.attribute = at.id
 			   LEFT JOIN unit u ON base_table.unit = u.id
