--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/relationship_attribute.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/relationship_attribute.xml
@@ -8,7 +8,18 @@
     <changeSet id="1" author="hhildebrand">
         <sql><![CDATA[
             CREATE OR REPLACE VIEW readable.relationship_attribute AS 
-			 SELECT ra.id, r.name AS relationship, a.name AS attribute, ra.numeric_value, ra.integer_value, ra.boolean_value, ra.text_value, u.name AS unit, ra.notes, up.name AS updated_by, ra.update_date
+			 SELECT ra.id, 
+                    r.name AS relationship, 
+                    a.name AS attribute, 
+                    ra.key AS key,
+                    ra.numeric_value, 
+                    ra.integer_value, 
+                    ra.boolean_value, 
+                    ra.text_value, 
+                    u.name AS unit, 
+                    ra.notes, 
+                    up.name AS updated_by, 
+                    ra.update_date
 			   FROM relationship_attribute ra
 			   JOIN relationship r ON ra.relationship = r.id
 			   JOIN attribute a ON ra.attribute = a.id
