derive isInferred() using comparison of the WKO id of the null inference.  Remove "inferred" column from network rules.
Fuck yea.  Incremental, refererntially integral network inference.  Go
try this at home.

--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/unit_network.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/unit_network.xml
@@ -12,7 +12,7 @@
                     p.name AS parent, 
                     rel.name AS relationship, 
                     c.name AS child,
-                    n.inferred,
+                    n.inference,
                     n.ordering,
                     n.premise1, 
                     n.premise2,
