Lot's of work done.  Tests failing on inserts because new columns are not set in them.

--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/job.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/job.xml
@@ -1,18 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
-    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd">
+<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
+    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd"
+>
 
-	<changeSet id="1" author="hhildebrand">
-		<sql><![CDATA[
+    <changeSet id="1" author="hhildebrand">
+        <sql><![CDATA[
             CREATE OR REPLACE VIEW readable.job AS 
-			 SELECT base_table.id, s.name AS service, 
+			 SELECT base_table.id, 
+                    s.name AS service, 
 			        p.name AS product, 
-			        at.name AS assign_to, r.name AS requester, 
-			        dt.name AS deliver_to, df.name AS deliver_from, 
-			        sc.name AS status, base_table.parent, base_table.sequence_number,
+			        at.name AS assign_to, 
+                    r.name AS requester, 
+			        dt.name AS deliver_to, 
+                    df.name AS deliver_from, 
+			        sc.name AS status, 
+                    base_table.parent, 
+                    ra.name AS requester_attribute,
+                    sa.name AS service_attribute,
+                    pa.name AS product_attribute,
+                    dta.name AS deliver_to_attribute,
+                    dfa.name AS deliver_from_attribute,
+                    ata.name AS assign_to_attribute,
+                    base_table.sequence_number,
 			        base_table.notes, 
 			        up.name AS updated_by, base_table.update_date
 			   FROM job base_table
@@ -23,7 +34,13 @@
                JOIN location dt ON base_table.deliver_to = dt.id
                JOIN location df ON base_table.deliver_from = df.id
 			   JOIN status_code sc ON base_table.status = sc.id
-			   JOIN agency up ON base_table.updated_by = up.id;
+			   JOIN agency up ON base_table.updated_by = up.id
+               JOIN attribute ra ON base_table.requester_attribute = ra.id
+               JOIN attribute sa ON base_table.service_attribute = sa.id
+               JOIN attribute pa ON base_table.product_attribute = pa.id
+               JOIN attribute dta ON base_table.deliver_to_attribute = dta.id
+               JOIN attribute dfa ON base_table.deliver_from_attribute = dfa.id
+               JOIN attribute ata ON base_table.assign_to_attribute = ata.id;
 			
 			ALTER TABLE readable.job
 			  OWNER TO core;
@@ -31,9 +48,9 @@
 			GRANT SELECT ON TABLE readable.job TO core_read_write;
 			GRANT SELECT ON TABLE readable.job TO core_read_only;
             ]]>
-		</sql>
-		<rollback>
-			<dropView viewName="readable.job" />
-		</rollback>
-	</changeSet>
+        </sql>
+        <rollback>
+            <dropView viewName="readable.job" />
+        </rollback>
+    </changeSet>
 </databaseChangeLog>
