All chronology logging now through the method logJobChronlogy on JobModel.  Sequence chronology using a counter on the job to ensure ordering.

--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/job_chronology.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/job_chronology.xml
@@ -9,6 +9,7 @@
         <sql><![CDATA[
             CREATE OR REPLACE VIEW readable.job_chronology AS 
              SELECT base.id, 
+                    base.job,
                     base.sequence_number,
                     at.name AS assign_to, 
                     s.name AS service, 
