--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/job.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/job.xml
@@ -27,6 +27,7 @@
                     ata.name AS assign_to_attribute,
                     base_table.sequence_number,
 			        base_table.notes, 
+                    base_table.current_log_sequence,
 			        up.name AS updated_by, base_table.update_date
 			   FROM job base_table
 			   JOIN product s ON base_table.service = s.id
