Fix location_attribute_authorization view

--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/location_attribute_authorization.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/location_attribute_authorization.xml
@@ -23,10 +23,10 @@
                 base_table.update_date
              FROM ruleform.location_attribute_authorization base_table
              LEFT JOIN agency res ON base_table.grouping_agency = res.id
-             JOIN relationship cls ON base_table.classification = cls.id
-             JOIN product b ON base_table.classifier = b.id
-             JOIN attribute att ON base_table.authorized_attribute = att.id
-             JOIN agency up ON base_table.updated_by = up.id;
+             LEFT JOIN relationship cls ON base_table.classification = cls.id
+             LEFT JOIN product b ON base_table.classifier = b.id
+             LEFT JOIN attribute att ON base_table.authorized_attribute = att.id
+             LEFT JOIN agency up ON base_table.updated_by = up.id;
 			
 			ALTER TABLE readable.location_attribute_authorization
 			  OWNER TO core;
