--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/unit_attribute_authorization.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/unit_attribute_authorization.xml
@@ -22,10 +22,10 @@
 			    base_table.update_date
 			 FROM unit_attribute_authorization base_table
 			 LEFT JOIN agency res ON base_table.grouping_agency = res.id
-			 JOIN relationship cls ON base_table.classification = cls.id
-			 JOIN unit b ON base_table.classifier = b.id
-			 JOIN attribute att ON base_table.authorized_attribute = att.id
-			 JOIN agency up ON base_table.updated_by = up.id;
+			 LEFT JOIN relationship cls ON base_table.classification = cls.id
+			 LEFT JOIN unit b ON base_table.classifier = b.id
+			 LEFT JOIN attribute att ON base_table.authorized_attribute = att.id
+			 LEFT JOIN agency up ON base_table.updated_by = up.id;
 			
 			ALTER TABLE readable.unit_attribute_authorization
 			  OWNER TO core;
