--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/attribute_meta_attribute_authorization.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/attribute_meta_attribute_authorization.xml
@@ -21,12 +21,12 @@
                 base_table.notes, 
                 up.name AS updated_by, 
                 base_table.update_date
-             FROM attr_meta_attr_auth base_table
-             LEFT JOIN agency res ON base_table.grouping_agency = res.id
-             LEFT JOIN relationship cls ON base_table.classification = cls.id
-             LEFT JOIN product b ON base_table.classifier = b.id
-             LEFT JOIN attribute att ON base_table.authorized_attribute = att.id
-             LEFT JOIN agency up ON base_table.updated_by = up.id;
+             FROM ruleform.attr_meta_attr_auth base_table
+             LEFT JOIN ruleform.agency res ON base_table.grouping_agency = res.id
+             LEFT JOIN ruleform.relationship cls ON base_table.classification = cls.id
+             LEFT JOIN ruleform.attribute_meta_attribute b ON base_table.classifier = b.id
+             LEFT JOIN ruleform.attribute att ON base_table.authorized_attribute = att.id
+             LEFT JOIN ruleform.agency up ON base_table.updated_by = up.id;
 			
 			ALTER TABLE readable.product_attribute_authorization
 			  OWNER TO core;
